# movies_database

./: .gitignore  README.md  add_movie.py  app.py  db.py  main.py  pyproject.toml  requirements.txt  view_movies.py  wish_list.py
api/: app.py
backend/: app.py
backend/api/: app.py
backend/api/routes/: movies.py
backend/db/: database.py
config/: logging_config.py
database/: sample_db.db
pages/: add_movie.py  edit_wish_list.py  view_movies.py  view_wish_list.py  wish_list.py
utils/: classes.py  get_dataframes.py  get_stats.py  update_dataframes.py  utility_functions.py
