[project]
name = "movies-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.139.2",
    "fastapi-users>=15.0.5",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "greenlet>=3.5.3",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.2",
    "uvicorn>=0.51.0",
]
